RESOLVED FIXED270837
<audio> and <video> loadeddata events not fired on page load
https://bugs.webkit.org/show_bug.cgi?id=270837
Summary <audio> and <video> loadeddata events not fired on page load
Jean-Yves Avenard [:jya]
Reported 2024-03-11 23:45:57 PDT
Issue relates to the loadeddata events on <audio> and <video> HTMLMediaElement and is specific to Safari/WebKit on iOS 17.4 Beta. The issue does not seem to repro on Safari 17.4 on Sonoma 14.4. The loadeddata events are not firing on page load. See the following https://jernoble.github.io/samples/bin/audio/mp3-without-extension.html
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2024-03-11 23:46:09 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-03-12 00:02:13 PDT
EWS
Comment 3 2024-03-12 14:41:41 PDT
Committed 275997@main (c0a2b3040d2d): <https://commits.webkit.org/275997@main> Reviewed commits have been landed. Closing PR #25762 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.